test_suite/tests/ui/integer/derive/default.stderr
error: Trait `Default` is derived for type Count, but `default = ` parameter is missing in #[nutype] macro
 --> tests/ui/integer/derive/default.rs:3:1
  |
3 | / #[nutype(
4 | |     validate(less_or_equal = 1024),
5 | |     derive(Default)
6 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `nutype` (in Nightly builds, run with -Z macro-backtrace for more info)
